--- a/index.html
+++ b/index.html
@@ -4,13 +4,61 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="top-blue"></div>
+
+
+    <div class="large-container">
+
+      <div class="phones-div">
+        <figure  class="phones">
+          <img class="phones-img" src="images/phones.png" alt="phones"/>
+        </figure>
+      </div>
+      <div class="main">
+        <header class="header">
+          <figure class="insta-img"> 
+            <img class= "insta" src="images/brand.png" alt="Instagram brand"/>
+          </figure>
+          <button class="log-in">
+            <img class="home-icon" src="images/home.png"/>
+            <strong>Log in</strong>
+          </button>
+        </header> 
+
+        <div id="container">
+          <div class="all-text">
+          <h3>Capture and Share <br/> 
+            the World's Moments</h3>
+          <p class="text">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family. </p>
+          <p class="text">Take a picture or video, choose a filter to transform its look <br/>
+          and feel, then post to Instagram &mdash; it's that easy.<br/>
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world</p>
+          <p class="text">Oh yeah, did we mention it's free? </p>
+         <div class="stores">
+                <img class="stores-imgs" src="images/badge-iphone.png" alt="Download on the App Store"/>
+                <img class="stores-imgs"src="images/badge-android.png" alt="Get it on Google Play "/>
+            </div> 
+        </div>
+          
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <footer><strong>
+        <a href="#">ABOUT US</a>
+        <a href="#">SUPPORT</a>
+        <a href="#">BLOG</a>
+        <a href="#">PRESS</a>
+        <a href="#">API</a>
+        <a href="#">JOBS</a>
+        <a href="#">PRIVACY</a>
+        <a href="#">TERMS</a> 
+        &copy; 2014 INSTAGRAM
+      </strong></footer>
+    </div>
   </body>
 </html>
